2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: add missing type_id information

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: add signal to keyword list

	* vapi/libglade-2.0.vala: regenerated

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorclass.vala,
	  gobject/valacodegeneratorinterface.vala: report too short type names,
	  based on patch by Ed Schouten, fixes bug 471253

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: allow property accessors in arbitrary order,
	  fixes bug 470233

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: improve error reporting in invocation
	  expressions

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valasemanticanalyzer.vala,
	  gobject/valacodegeneratorassignment.vala: deny access to instance
	  members from static methods, improve error reporting

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: fix internal warnings on syntax errors,
	  fixes bug 471226

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vapi/gnome-vfs-2.0.vala,
	  vapi/packages/gnome-vfs-2.0/gnome-vfs-2.0-custom.vala: add missing
	  init/shutdown methods

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala: fix warnings on invalid code

2007-08-29  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusbindingprovider.vala: fix warnings on invalid code

2007-08-28  Jürg Billeter  <j@bitron.ch>

	* vala/valamethod.vala: ensure that the error domains match when
	  comparing two methods for equality, fixes bug 465123

2007-08-28  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodeswitchstatement.vala,
	  gobject/valacodegeneratorclass.vala: generate warning about invalid
	  property ids, fixes bug 463668

2007-08-28  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* gobject/valacodegenerator.vala: avoid crash on missing copy
	function, fixes bug 471063.
