@@ -1,0 +1,5 @@
+atk
+cairo
+gdk-2.0
+pango
+gtk+-2.0
