@@ -1,5 +1,10 @@
 2007-08-29  Jürg Billeter  <j@bitron.ch>
 
+	* vapi/Makefile.am, vapi/libnotify.valam, vapi/packages/libnotify/: add
+	  libnotify bindings, patch by Nicolas Christener and Roland Hostettler
+
+2007-08-29  Jürg Billeter  <j@bitron.ch>
+
 	* vapi/glib-2.0.vala: add missing type_id information
 
 2007-08-29  Jürg Billeter  <j@bitron.ch>
